* небольшие правки в TestRunner для исправления проблемы преобразования в список